DmxSimple v3 release:
  Changes from v2 to v3:
    Optimised interrupt routine now supports serial baud rates up to 115200.
    DMX output pin can be changed with the DmxSimple.usePin() function.
    Automatic support for future clock rates and pin mappings.
    Syntax highlighting in Arduino editor fixed.
    More comments added to FadeUp and SerialToDmx examples
    FadeUp example now demonstrates all DmxSimple functions.
    Release notes file added. (For older revisions, see SVN log on Google Code)