@@ -21,6 +21,7 @@ class DmxSimpleClass
     void maxChannel(int);
     void write(int, uint8_t);
     void usePin(uint8_t);
+    void setStartCode(uint8_t);
 };
 extern DmxSimpleClass DmxSimple;
 
