@@ -1,5 +1,5 @@
 name=DmxSimple
-version=3.1
+version=3.2
 author=Peter Knight, Tinker.it!
 maintainer=Paul Stoffregen
 sentence=Drive DMX controlled lights and visual effects available from DJ or theatrical suppliers.
